--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
+- top bar
+- learn cards based on level
+- learn cards based on length
+
 - user accounts
 - preference (word length)
 - gamification
+- ads banner
