--- a/TODO
+++ b/TODO
@@ -1,11 +1,10 @@
-- display word type (verb, noun, adj, etc) colour-coded (from Lancaster)
 - display a random sample sentence using this word
 
 - word repetition algo -> ?
 	- add frequency to word database using Lancaster corpus
 
 - user accounts (fb?)
+- get ip info for stats report
 
-- preference (word length)
 - gamification (earn points and/or medals)
 - ads
